package com.itacademy.cliagenda.application;

import com.itacademy.cliagenda.application.menu.AppMenu;

public class AgendaApp {

    //main app start
    public static void main(String[] args) {

        AppMenu appMenu = new AppMenu();

        appMenu.playMenu();
    }
}
