SET FOREIGN_KEY_CHECKS = 0;

CREATE TABLE IF NOT EXISTS events (
    id INT PRIMARY KEY,
    title VARCHAR(100),
    description VARCHAR(250),
    eventDate DATETIME,
    recurrent TINYINT,
    annualRecurring TINYINT,
    recurrenceInterval INT
    );

CREATE TABLE IF NOT EXISTS tasks (
    id INT PRIMARY KEY,
    body VARCHAR(100),
    event_fk INT,
    completed TINYINT DEFAULT 0,
    FOREIGN KEY (event_fk) REFERENCES events(id)
);

CREATE TABLE IF NOT EXISTS notes (
    id INT PRIMARY KEY,
    body VARCHAR(250),
    task_fk INT,
    FOREIGN KEY (task_fk) REFERENCES tasks(id)
);

SET FOREIGN_KEY_CHECKS = 1;

-- Sample data
INSERT INTO events (id, title, description, eventDate, recurrent) VALUES
(1, 'Reunión de equipo', 'descripcion', '2024-06-15 10:00:00', 0),
(2, 'Presentación proyecto','descripcion' , '2024-06-20 14:00:00', 0),
(3, 'Entrega deadline', 'descripcion' ,'2024-06-30 23:59:00', 0);

INSERT INTO tasks (id, body, event_fk, completed) VALUES (1, 'Tarea 1', 1, 0);
INSERT INTO tasks (id, body, event_fk, completed) VALUES (2, 'Tarea 2', 1, 0);

INSERT INTO notes (id, body, task_fk) VALUES (1, 'Preparar slides para la reunión', 1);
INSERT INTO notes (id, body, task_fk) VALUES (2, 'Revisar presupuesto', 1);
INSERT INTO notes (id, body, task_fk) VALUES (3, 'Practicar presentación', 2);