package com.itacademy.cliagenda.common.utils;

public class ConsoleUtils {
}
